--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,95 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+h2 {
+  color: #06365f;
+  margin: 20px;
+  font-family: "Open Sans";
+}
+
+p {
+  font-family: "Open Sans";
+  margin: 20px;
+}
+
+.phone-div {
+  position: absolute;
+  height: 500px;
+  top: 100px;
+  left: 70px;
+  margin-left: 220px;
+}
+
+.content-div {
+  position: absolute;
+  top: 100px;
+  right: 10px;
+  width: 500px;
+  height: 500px;
+  margin-right: 220px;
+}
+
+.title-div {
+  margin-top: 20px;
+}
+
+.text-div {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 20px; 
+  margin-top: 40px;
+  font-weight: bolder;
+}
+
+.home-button {
+  background-image: url("../images/bgtile.png");
+  width: 120px;
+  height: 50px;
+  font-family: "Open Sans";
+  font-weight: bold;
+  color: #fff; 
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  position: absolute;
+  right: 1px;
+  position: absolute;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
+.align-with-text {
+  position: relative;
+  float: left;
+  margin-top: 15px;
+}
+
+.store-buttons {
+  padding-top: 10px;
+  margin-left: 20px;
+}
+
+.footers {
+  list-style-type: none;
+  margin: 0;
+  position: absolute;
+  padding: 0;
+  bottom: 15px;
+  left: 450px;
+}
+
+li {
+  float: left;
+  font-family: "Open Sans";
+  color: #06365f;
+  font-weight: bold;
+  margin: 5px;
+}
+
+.copyright {
+  color: grey;
+  font-weight: normal;
 }
