--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,117 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+
+.container {
+  width: 1050px;
+  margin: 80px auto 0px;
+}
+
+aside {
+  float: left;
+  margin-top: 25px;
+}
+
+.content {
+  float: left;
+  width: 500px;
+  position: relative;
+  top: 25px;
+}
+
+header {
+  margin-left: 70px;
+  width: 585px;
+  padding-bottom: 15px;
+  overflow:auto;
+}
+
+header button {
+  float: right;
+  background: linear-gradient(#4689c0,#1c5380);
+  padding: 5px 7px;
+  margin-top: 20px;
+  color: white;
+  border-radius: 3px;
+  border: solid 1px rgba(0,0,0,0.6);
+  outline: none;
+}
+
+button img {
+  padding: 4px 8px 0px 5px;
+}
+
+.btnText {
+  position: relative;
+  top: -5px;
+  padding-right: 5px;
+  font-weight: bold;
+}
+
+section {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 504px;
+  padding: 15px 45px;
+  margin-left: 70px;
+  border-radius: 5px;
+  text-align: justify;
+}
+
+.text-content {
+  font-size: 1.04em;
+}
+
+h1 {
+  color: #06365f;
+  width: 300px;
+  text-align: left;
+  font-size: 1.7em;
+}
+
+.store {
+  margin: 10px;
+}
+
+footer {
+  clear: both;
+  margin: 0 auto;
+  width: 800px;
+  position: relative;
+  top: 80px;
+}
+
+footer ul {
+  list-style: none;
+  display: inline;
+  font-size: 0.8em;
+}
+
+li {
+  display: inline;
+  font-weight: bold;
+  padding: 0px 10px;
+  font-variant-caps: all-small-caps;
+}
+
+li a {
+  color: #5296ce;
+  text-decoration: none;
+}
+
+.copyright {
+  font-weight: bold;
+  color: lightgray;
+  padding-left: 10px;
+  font-variant-caps: all-small-caps;
+  font-size: 0.8em;
 }
