--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,77 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.content {
+  margin: 6% 18% 5%;
+}
+
+.phones {
+  float: left;
+  width: 39%;
+}
+
+.side-text{
+  float: left;
+  width: 52%;
+  padding-left: 3%;
+  margin-top: 2%;
+}
+
+
+.btn-log{
+  float: right;
+  margin-top: 5px;
+}
+
+.insta-description{
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 2% 7%;
+}
+
+.btn-log button{
+  color: white;
+  background-image: url("../images/bgtile.png");
+  border-width: 0;
+  font-weight: bold;
+  text-shadow: 1px white;
+  padding: 10px;
+}
+
+.btn-log{
+  margin-top: 15px;
+  box-shadow: 1px 1px 1px 1px #06365f;
+  border-radius: 3px;
+}
+
+footer{
+  clear: both;
+  text-align: center;
+  padding-top: 1%;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  line-height: 0.8em;
+}
+
+.btn-app-store,
+.btn-google-play {
+  display: inline;
+  border: 0;
+  padding: 0;
+  margin: 3px;
+}
+
+.insta-buttons {
+  margin-left: 15px;
+}
+
+a{
+  text-decoration: none;
+  color: #1c5380;
 }
