--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,77 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.big-div {
+margin-left: 25%;
+padding-top: 5%;
+}
+
+.phones-img {
+  float: left;
+  margin-right: 70px;
+}
+
+
+li {
+  list-style-type: none;
+  display: inline;
+} 
+
+.link {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.border {
+background-image: url("../images/frame.png");
+background-repeat: no-repeat;
+background-position: 67% 10%;
+padding-top: 30px;
+}
+
+footer {
+  margin-top: 4%;
+  margin-left: 27%;
+  font-weight: bold;
+  color: grey;
+}
+
+.btn {
+  background-image: url("../images/home.png");
+  background-color: #1c5380;
+  background-repeat: no-repeat;
+  background-position: 10px 3px;
+  border: none;
+  cursor: pointer;
+  height: 30px;
+  width: 100px;
+  padding-left: 25px;
+  margin-left: 50px;
+  color: white;
+  font-weight: bold;
+}
+
+.bgtile {
+  background-image: url("../images/bgtile.png");
+  height: 280px;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+}
+
+.text {
+  margin-left: 100px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.download {
+  cursor: pointer;
+  padding-top: 30px;
+}
