--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,34 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.wrapper{
+  background-color: #1c5380;
+  height: 300px;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+#log-in-button{
+  color: white;
+}
+
+.container-left{
+  float: left;
+  margin-left: 120px;
+
+}
+
+#iphone-picture{
+  margin: 40px;
+}
+
+.container-right{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
