--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,115 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.left{
+  float:left;
+  width: 40%;
+}
+
+.phones{
+position:relative;
+left:150px;
+top:100px;
+}
+
+.right{
+float:left;
+width: 60%;
+}
+
+
+.logo {
+position:relative;
+top: 110px;
+float:left;
+}
+
+ .login {
+position:relative;
+top: 130px;
+left: 100px;  
+background:linear-gradient(#6196c2,#1c5380);
+height:40px;
+color:white;
+
+} 
+
+.button{
+  position:relative;
+  bottom:5px;
+  font-weight:bold;
+
+}
+
+.text-container{
+  position:relative;
+  text-align:justify;
+  top: 130px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  width: 500px;
+  }
+
+.title{
+  position:absolute;
+  margin: 10px 50px;
+  top: 40px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  color: #06365f;
+}
+.container-body{
+  position:absolute;
+  top: 100px;
+  margin: 40px 50px;
+
+}
+
+.stores{
+  position:relative;
+  left:-10px;
+  margin-top:13px;
+  margin-left:10px;
+}
+
+.footer{
+position:relative;
+clear:both;
+text-align:center;
+top:150px;
+left:260px;
+text-transform:uppercase;
+font-size: 0.7em;
+font-weight:bold;
+
+
+}
+
+ul{
+  list-style-type:none;
+}
+
+ul li{
+  padding:0 10px;
+  float:left;
+
+}
+
+ul li a{
+  text-decoration: none;
+  color:#06365f;
+}
+
+.copyright{
+  position:relative;
+  left:-340px;
+  text-decoration: none;
+  color:lightgray;
+
 }
