--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,72 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding-top: 80px;
+  background: linear-gradient(to bottom,#1c5380 0%,#1c5380 40%,white 40%,white 100%);
+  background-repeat: no-repeat;
+}
+
+.wrapper{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+footer ul{
+  list-style-type: none;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+footer ul li{
+  display: inline;
+  padding-right: 15px;
+  color: #1c5380;
+}
+
+.copyright{
+  color: rgba(55,55,55, .4)
+}
+
+.container{
+  float:right;
+  width: 60%;
+}
+.phonePic{
+  float:left; 
+}
+.subContainer{
+  padding: 20px 80px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header{
+  padding: 20px;
+}
+
+.capture{
+  width: 70%;
+  color: #06365f;
+  font-size: 2em;
+}
+
+.home{
+  background: linear-gradient(to bottom,#285c86 0,#10395a 100%);
+  padding: 15px 20px;
+  color: white;
+  border: 1px solid gray;
+  border-radius: 3px;
+  float: right;
+}
+
+.storeContainer{
+  padding-top: 20px;
+}
+footer{
+  padding-top: 35px;
+  clear: right;
+}
+
+strong{
+  font-weight: 700;
 }
