--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,21 @@ light blue: #1c5380
 */
 
 body {
+  height: 100px;
+  background-position: top;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
 }
+
+.backgroundDivide {
+  display:block;
+  border: 1px;
+  background-color: blue;
+  height: 240%;
+}
+
+
+
+  
+
