--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,101 @@
-/*
+    /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+    
+    body {
+        font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+        margin: 0;
+    }
+    
+    .blue-box {
+        height: 300px;
+        background-color: #06365f;
+        position: relative;
+        z-index: 0;
+    }
+    
+    .left {
+        width: 50%;
+        position: absolute;
+        top: 100px;
+        left: 10%;
+    }
+    
+    .right {
+        width: 50%;
+        position: absolute;
+        top: 140px;
+        left: 42%;
+    }
+    
+    .instagram-login {
+      float:left;
+    }
+    
+    #instagram-logo {
+      margin: 0 100px 0 0;
+    }
+    
+    .description {
+        background-color: white;
+        padding: 15px 42px;
+        border-radius: 8px;
+        width: 75%;
+        box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    }
+    
+    button {
+      width: 130px;
+      background-color: #1c5380;
+      float: right;
+      color: white;
+      font-size: 14px;
+      border: none;
+      box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+      border-radius: 5px;
+      margin-top: 10px;
+    }
+    
+    .footer {
+        position: relative;
+        margin: 0 auto;
+        width: 100%;
+    }
+    
+    .clearfix {
+        clear: both;
+    }
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+    .stores img{
+      margin-right: 20px;
+    }
+
+    #home{
+      float: left;
+      padding: 10px;
+    }
+
+    .instagram-login p{
+      margin: 12px;
+    }
+
+    .stores{
+      margin-top:20px;
+    }
+
+    section{
+      height: 650px;
+    }
+
+    a{
+      text-decoration: none;
+      color: #1c5380;
+      font-weight: bold;
+      margin:7px;
+    }
+
+    footer{
+      margin-left: 20%;
+    }
