--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,60 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+	background-image: url("../images/bgtile.png");
+	background-repeat:repeat-x;
+}
+
+section {
+	background-color: :black;
+	position:absolute;
+	width:600px;
+	height:500px;
+	top:100px;
+	right:100px;
+
+}
+
+.phone{
+	position:absolute;
+	top:100px;
+	left:100px;
+}
+
+.texto {
+	background-image: url("../images/frame.png");
+	background-repeat: no-repeat;
+	width: 500px;
+}
+
+.texto2{
+	width:400px;
+	position:relative;
+	left:20px;
+	top: 35px;
+}
+
+h1{
+	font-size: 24px;
+	width:300px;
+	color:#2b496e;
+}
+
+nav ul li{
+	display:;
+	float:left;
+	position:absolute;
+	bottom:-200px;
+}
+
+.botones{
+	margin-left:20px;
+}
+
+.google{
+	margin-left:20px;
+}
+
+button{
+	border-radius: 5px;
 }
