--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,55 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+.dad {
+  position: relative;
+  top: 150px;
+}
+.columnleft {
+  text-align: center;
+  width: 50%;
+  float: left;
+  position: absolute;
+}
+
+.columnright {
+  text-align: center;
+  position: absolute;
+  width: 50%;
+  left: 500px;
+  float: right;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.logo {
+  position:absolute;
+  left: 20px;
+  bottom:350px;
+}
+
+.footer {
+  text-align: center;
+  font-size: 20px;
+  bottom: 20px;
+  position: absolute;
+  left: 30%;
+}
+
+.text {
+  text-align: justify;
+  padding: 40px;
+}
+
+.text h1{
+  color: darkblue;
+}
+
+.buttons {
+  text-align: center;
+  padding: 20px;
 }
