--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,94 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.tile{
+  width: 100%;
+  height: 50vh;
+  position: absolute;
+  background: repeat-x url(../images/bgtile.png);
+  z-index: -1;
+}
+
+.outer-container{
+  padding-top: 100px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.phone-img-container{
+  object-fit: none;
+  float: left;
+}
+
+.right-container{
+  width: 50vw;
+  float: left;
+  margin: 10px 0 0 25px;
+}
+
+.logo-and-log-in button{
+  float: right;
+  background: #06365f;
+  background-image: -webkit-linear-gradient(top, #06365f, #1c5380);
+  background-image: -moz-linear-gradient(top, #06365f, #1c5380);
+  background-image: -ms-linear-gradient(top, #06365f, #1c5380);
+  background-image: -o-linear-gradient(top, #06365f, #1c5380);
+  background-image: linear-gradient(to bottom, #06365f, #1c5380);
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  color: #ffffff;
+  padding: 10px 20px 10px 20px;
+  border: solid #1c5380 2px;
+  text-decoration: none;
+  margin: 20px;
+  font: inherit;
+}
+
+.home-image{
+  vertical-align: middle;
+}
+
+.clearfix{
+  clear: both;
+}
+
+.bottom-right-container{
+  background: url(../images/frame.png) no-repeat;
+  background-size: contain;
+  padding: 10%;
+}
+
+.bottom-right-container h2{
+  margin-top: 0;
+  color: #06365f;
+}
+
+.get-app-container{
+  margin: 50px 0;
+}
+
+.get-app-container .right-button{
+  margin-left: 20px;
+}
+
+.links{
+  width: 70%;
+  margin: 0 auto;
+  font-weight: 600;
+}
+
+.links a{
+  text-decoration: none;
+  margin: 10px;
+  color: #1c5380;
+}
+
+.copyright{
+  margin: 20px;
+  opacity: 0.5;
+}
