--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,90 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+ margin : 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.background{
+  background: linear-gradient(rgb(70,130,180), #2e6492);
+  position: absolute;
+  height: 300px;
+  width: 100%;
+  z-index: -1;
+}
+.phones{
+  float:left;
+  margin: 60px 20px 10px 20%;
+  width: 30%;
+}
+.logo{
+  float: left;
+}
+.home{
+  background: linear-gradient(rgb(70,130,180), #2e6492);
+  border: 1px solid;
+  float: left;
+  margin: 15px 0 0 140px;
+  padding: 10px;
+  border-radius: 5px;
+}
+.home img{
+  vertical-align: text-bottom;
+}
+.home p{
+  display: inline;
+  padding-left: 10px;
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+}
+.info{
+  float: left;
+  width: 40%;
+  margin-top: 70px;
+  margin-right: 20px;
+
+}
+.infotext{
+  background-color: aliceblue;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  float: left;
+  height: 400px;
+}
+.infotext h1{
+  font-size: 30px;
+  padding-left: 20px;
+}
+.infotext p{
+  padding-left: 20px;
+  padding-right: 20px;
+  line-height: 30px;
+}
+.iphone{
+  float: left;
+  margin: 70px 10px 20px 30px;
+}
+.android{
+  float: left;
+  margin: 70px 10px 20px 60px;
+}
+footer{
+  position:absolute;
+  bottom: 40px;
+  left: 30%;
+}
+footer ul{
+  list-style:none;
+}
+footer li{
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: #2e6492;
+  font-weight: 600;
 }
