--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,104 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+p{
+  font-size: 14px;
+  font-weight: 400;
+  padding-top: 10px;
+}
+
+.background-color{
+  width: 100%;
+  height: 30%;
+  background-color: #43668c;
+  position: absolute;
+  z-index: -1;
+}
+
+.phones-photo{
+  float: left;
+  margin-top: 125px;
+  margin-left: 275px;
+  height: 500px;
+  width: 300px;
+}
+
+.instagram-logo{
+  float: left;
+  margin-top: 120px;
+  margin-left: 75px;
+  padding-bottom: 20px;
+}
+
+.log-in{
+  margin-top: 145px;
+  margin-left: 35px;
+  height: 35px;
+  width: 90px;
+  color: white;
+  background-color: #597C9E;
+  border: 2px solid #1c3d5d;
+  line-height: 5px;
+  border-radius: 7%;
+}
+
+.button-text{
+  font-weight: 800;
+  padding-left: 10px;
+  vertical-align: 5px;
+  margin-bottom: 54px;
+}
+
+.center-section-container{
+  float: right;
+  margin-right: 355px;
+  padding: 25px;
+  height: 365px;
+  width: 375px;
+  background-color: white;
+  border-radius: 1%;
+}
+
+.frame{
+  position: absolute;
+  margin-top: -45px;
+  margin-left: -36px;
+  width: 448px;
+  height: 500px;
+  z-index: -1;
+}
+
+.capture-title{
+  color: #06365f;
+  line-height: 7px;
+}
+
+.iphone{
+  margin-top: 40px;
+}
+
+.android{
+  margin-top: 40px
+}
+
+.footer-links{
+  padding-top: 75px;
+  margin-left: 33%;
+  clear: both;
+}
+
+.footer-links a{
+  color: #1c5380;
+  text-decoration: none;
+  padding-left: 10px;
+  font-weight: 400;
+
+}
+
+.copyright{
+  padding-left: 10px;
+  font-weight: 400;
+  font-size: 12px;
+  color: lightgray;
+}
