--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,96 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #eee;
 }
+
+.container {
+  margin: 0 auto;
+  width: 70%;
+}
+
+.banner {
+  width: 100%;
+  height: 250px;
+  background: linear-gradient(#1c5380,#06365f);
+}
+
+.login {
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.login a {
+  background: linear-gradient(#1c5380,#06365f);
+  padding: 15px 20px;
+  color: white;
+  text-decoration: none;
+  box-shadow: 0 0 2px #021625;
+  font-size: 13px;
+  margin-left: 125px;
+}
+
+.login a img {
+  vertical-align: middle;
+  padding-right: 10px;
+}
+
+.box {
+  border-radius: 16px;
+  background:url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding: 35px;
+}
+
+.box h1 {
+  color: #06365f;
+  font-size: 18px;
+}
+
+.box p {
+  font-weight: 300;
+  font-size: 14px;
+  color: #666;
+}
+
+.caja {
+  position: absolute;
+  top: 125px;
+}
+
+.menu {
+  margin-left: 85px;
+}
+
+.menu ul {
+  list-style: none;
+}
+
+.menu ul li {
+  display: inline-block;
+  margin-top: 45px;
+  padding: 15px 5px;
+  color: #1c5380;
+  font-size: 13px;
+  text-transform: uppercase;
+}
+
+.menu ul .copyrights {
+  color: #aaa;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
