--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,92 @@ light blue: #1c5380
 */
 
 body {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.top{
+  width: 100%;
+  height: 200px;
+  position: relative;
+}
+
+.header{
+  position: absolute;
+  top: 150px;
+  right: 500px;
+}
+
+.button{
+  position: absolute;
+  top: 170px;
+  right: 350px;
+  background-color: #1c5380;
+  color: white;
+}
+
+.button button{
+  border: 1px solid #06365f;
+  background-color:#1c5380;
+  color: white;
+}
+.button img{
+  background-color: #1c5380;
+  vertical-align: middle;
+  color: white;
+}
+
+.phones{
+  float:left;
+  padding-left: 200px;
+  margin-top: -50px;
+}
+
+.container{
+  position: relative;
+  height: 400px;
+  width: 510px;
+  top: 25px;
+  left: 630px;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 10px;
+}
+
+.container h1 {
+  padding-left: 5px;
+  color: #1c5380;
+  position: absolute;
+  top: 1px;
+  left: 15px;
+}
+
+.container p{
+    padding-left: 5px;
+    position: absolute;
+    top: 100px;
+    left: 15px;
+}
+
+.apple-google {
+  position: absolute;
+  top: 350px;
+
+}
+
+.apple-google img{
+  margin: 0 10px;
+}
+
+.links{
+  font-weight: bolder;
+  width: 700px;
+  height: 200px;
+  left: 400px;
+  top: 750px;
+  color: #1c5380;
+  position: absolute;
 }
